--- a/portfoliobaru/about.html
+++ b/portfoliobaru/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" />
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Portfolio|Thimoty Pascal Munthe</title>
   </head>
@@ -24,19 +24,19 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="/index.html" class="nav_-link">Home</a>
+              <a href="index.html" class="nav_-link">Home</a>
             </li>
 
             <li class="nav__item">
-              <a href="/about.html" class="nav_-link">About Me</a>
+              <a href="about.html" class="nav_-link">About Me</a>
             </li>
 
             <li class="nav__item">
-              <a href="/work.html" class="nav_-link">Portfolio</a>
+              <a href="work.html" class="nav_-link">Portfolio</a>
             </li>
 
             <li class="nav__item">
-              <a href="/contact.html" class="button">Contact Me</a>
+              <a href="contact.html" class="button">Contact Me</a>
             </li>
           </ul>
 
@@ -70,7 +70,7 @@
         <div class="about__container about__page container grid">
           <div class="about__box box">
             <div class="box_content">
-              <img src="/image/bub2.jpg" alt="" />
+              <img src="image/bub2.jpg" alt="" />
             </div>
           </div>
 
@@ -84,18 +84,18 @@
               </p>
             </div>
 
-            <a href="/contact.html" class="about__button button">Contact Me</a>
+            <a href="contact.html" class="about__button button">Contact Me</a>
             <div class="about__skills">
               <h3 class="about__skills-title">My Skills Are</h3>
 
               <div class="about__skills-content grid">
-                <img src="/image/html.jpeg" alt="image" class="about__skills-img" />
-                <img src="/image/css.jpeg" alt="image" class="about__skills-img" />
-                <img src="/image/js.png" alt="image" class="about__skills-img" />
-                <img src="/image/php.jpeg" alt="image" class="about__skills-img" />
-                <img src="/image/bostrap.png" alt="image" class="about__skills-img" />
-                <img src="/image/canva.png" alt="image" class="about__skills-img" />
-                <img src="/image/figma.jpeg" alt="image" class="about__skills-img" />
+                <img src="image/html.jpeg" alt="image" class="about__skills-img" />
+                <img src="image/css.jpeg" alt="image" class="about__skills-img" />
+                <img src="image/js.png" alt="image" class="about__skills-img" />
+                <img src="image/php.jpeg" alt="image" class="about__skills-img" />
+                <img src="image/bostrap.png" alt="image" class="about__skills-img" />
+                <img src="image/canva.png" alt="image" class="about__skills-img" />
+                <img src="image/figma.jpeg" alt="image" class="about__skills-img" />
               </div>
             </div>
           </div>
@@ -107,19 +107,19 @@
     <footer class="footer">
       <div class="footer__container container grid">
         <div class="footer__content grid">
-          <a href="/index.html" class="footer__logo">Thimoty</a>
+          <a href="index.html" class="footer__logo">Thimoty</a>
 
           <ul class="footer__links">
             <li>
-              <a href="/about.html" class="footer__link">About Me</a>
+              <a href="about.html" class="footer__link">About Me</a>
             </li>
 
             <li>
-              <a href="/work.html" class="footer__link">Portfolio</a>
+              <a href="work.html" class="footer__link">Portfolio</a>
             </li>
 
             <li>
-              <a href="/contact.html" class="footer__link">Contact ME</a>
+              <a href="contact.html" class="footer__link">Contact ME</a>
             </li>
           </ul>
 
@@ -146,6 +146,6 @@
     </footer>
 
     <!--=============== MAIN JS ===============-->
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
