--- a/portfoliobaru/contact.html
+++ b/portfoliobaru/contact.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" />
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Portfolio|Thimoty Pascal Munthe</title>
   </head>
@@ -24,19 +24,19 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="/index.html" class="nav_-link">Home</a>
+              <a href="index.html" class="nav_-link">Home</a>
             </li>
 
             <li class="nav__item">
-              <a href="/about.html" class="nav_-link">About Me</a>
+              <a href="about.html" class="nav_-link">About Me</a>
             </li>
 
             <li class="nav__item">
-              <a href="/work.html" class="nav_-link">Portfolio</a>
+              <a href="work.html" class="nav_-link">Portfolio</a>
             </li>
 
             <li class="nav__item">
-              <a href="/contact.html" class="button">Contact Me</a>
+              <a href="contact.html" class="button">Contact Me</a>
             </li>
           </ul>
 
@@ -96,19 +96,19 @@
     <footer class="footer">
       <div class="footer__container container grid">
         <div class="footer__content grid">
-          <a href="/index.html" class="footer__logo">Thimoty</a>
+          <a href="index.html" class="footer__logo">Thimoty</a>
 
           <ul class="footer__links">
             <li>
-              <a href="/about.html" class="footer__link">About Me</a>
+              <a href="about.html" class="footer__link">About Me</a>
             </li>
 
             <li>
-              <a href="/work.html" class="footer__link">Portfolio</a>
+              <a href="work.html" class="footer__link">Portfolio</a>
             </li>
 
             <li>
-              <a href="/contact.html" class="footer__link">Contact ME</a>
+              <a href="contact.html" class="footer__link">Contact ME</a>
             </li>
           </ul>
 
@@ -135,12 +135,12 @@
     </footer>
 
     <!--=============== MAIN JS ===============-->
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 
     <!--=============== EMAIL JS ===============-->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
     <!--=============== CONTACT JS ===============-->
-    <script src="/contact.js"></script>
+    <script src="contact.js"></script>
   </body>
 </html>
