--- a/portfoliobaru/index.html
+++ b/portfoliobaru/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" />
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="swiper-bundle.min.css" />
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Portfolio|Thimoty Pascal Munthe</title>
   </head>
@@ -22,24 +22,24 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="index.html" class="nav__logo">Thimoty</a>
+        <a href="#" class="nav__logo">Thimoty</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="/index.html" class="nav_-link">Home</a>
+              <a href="index.html" class="nav_-link">Home</a>
             </li>
 
             <li class="nav__item">
-              <a href="/about.html" class="nav_-link">About Me</a>
+              <a href="about.html" class="nav_-link">About Me</a>
             </li>
 
             <li class="nav__item">
-              <a href="/work.html" class="nav_-link">Portfolio</a>
+              <a href="work.html" class="nav_-link">Portfolio</a>
             </li>
 
             <li class="nav__item">
-              <a href="/contact.html" class="button">Contact Me</a>
+              <a href="contact.html" class="button">Contact Me</a>
             </li>
           </ul>
 
@@ -94,7 +94,7 @@
               </a>
             </div>
 
-            <a href="/pdf/CV Thimoty Pascal Munthe.pdf" download="" class="home__button button">Download CV</a>
+            <a href="pdf/CV Thimoty Pascal Munthe.pdf" download="" class="home__button button">Download CV</a>
           </div>
         </div>
       </section>
@@ -200,7 +200,7 @@
         <div class="work__container container grid">
           <article class="work__card">
             <a href="" target="_blank" class="work__link">
-              <img src="/image/project1.png" alt="image" class="work__img" />
+              <img src="image/project1.png" alt="image" class="work__img" />
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
@@ -210,7 +210,7 @@
 
           <article class="work__card">
             <a href="" target="_blank" class="work__link">
-              <img src="/image/project2.png" alt="image" class="work__img" />
+              <img src="image/project2.png" alt="image" class="work__img" />
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
@@ -220,7 +220,7 @@
 
           <article class="work__card">
             <a href="" target="_blank" class="work__link">
-              <img src="/image/project3.png" alt="image" class="work__img" />
+              <img src="image/project3.png" alt="image" class="work__img" />
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
@@ -242,7 +242,7 @@
             <div class="swiper-wrapper">
               <article class="testimonial__card swiper-slide">
                 <div class="testimonial__border">
-                  <img src="/image/testi1.jpg" alt="image" class="testimonial__img" />
+                  <img src="image/testi1.jpg" alt="image" class="testimonial__img" />
                 </div>
 
                 <h2 class="testimonial__name">Stefan Patanduk</h2>
@@ -251,7 +251,7 @@
 
               <article class="testimonial__card swiper-slide">
                 <div class="testimonial__border">
-                  <img src="/image/testi2.jpg" alt="image" class="testimonial__img" />
+                  <img src="image/testi2.jpg" alt="image" class="testimonial__img" />
                 </div>
 
                 <h2 class="testimonial__name">Louis Sinaga</h2>
@@ -260,7 +260,7 @@
 
               <article class="testimonial__card swiper-slide">
                 <div class="testimonial__border">
-                  <img src="/image/testi3.jpg" alt="image" class="testimonial__img" />
+                  <img src="image/testi3.jpg" alt="image" class="testimonial__img" />
                 </div>
 
                 <h2 class="testimonial__name">Daud Sipata</h2>
@@ -335,12 +335,12 @@
     </a>
 
     <!--=============== MAIN JS ===============-->
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 
     <!--=============== SWIPER JS ===============-->
-    <script src="/swiper-bundle.min.js"></script>
+    <script src="swiper-bundle.min.js"></script>
 
     <!--=============== INDEX JS ===============-->
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
